@@ -8,7 +8,8 @@
 	* generic/tclFCmd.c:
 	* tests/fileSystem.test: fixed a 'knownBug' with 'file
 	attributes ""'
-	* tests/winFCmd.test: added 'pcOnly' constraint to some
+	* tests/winFCmd.test: 
+	* tessts/winFile.test: added 'pcOnly' constraint to some
 	tests to make for more useful 'tests skipped' log from 
 	running all tests.
 	
